Fix(Reports): Adding vertical Align Center to every Cell

--- a/frontend/src/app/pages/dashboard-admin/inventory/inventory.component.css
+++ b/frontend/src/app/pages/dashboard-admin/inventory/inventory.component.css
@@ -86,3 +86,8 @@
     border-top: 1px solid rgb(214, 212, 212);
     text-align: center;
 }
+
+td, th {
+    vertical-align: middle;
+    text-align: center;
+}
