--- a/frontend/src/app/pages/dashboard-admin/joint-report/joint-report.component.css
+++ b/frontend/src/app/pages/dashboard-admin/joint-report/joint-report.component.css
@@ -45,6 +45,11 @@
     text-align: center;
 }
 
+td, th {
+    vertical-align: middle;
+    text-align: center;
+}
+
 td > a {
     color: #2DA5F3;
     cursor: pointer;
